--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-MONGODB_URI =mongodb+srv://danix:danix@cluster0.0vwbm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI =
+mongodb+srv://danix:danix@cluster0.0vwbm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = danixdanix
 PORT= 8080
