--- a/client/package.json
+++ b/client/package.json
@@ -45,8 +45,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "redux-mock-store": "^1.5.5",
     "tailwindcss": "^3.4.14"
   }
 }
